src/snapshots/solfaml_parser__parser__tests__dynamics_parsing.snap
---
source: src/parser.rs
expression: dynamics
---
[
    Level {
        pos: 1,
        kind: F,
    },
    Crescendo {
        start: 3,
        end: 7,
    },
    Accent {
        pos: 8,
    },
    Level {
        pos: 10,
        kind: MP,
    },
]
