src/snapshots/solfaml_parser__parser__tests__full_parsing.snap
---
source: src/parser.rs
expression: solfa.staffs
---
[
    Staff {
        dynamics: [
            Level {
                pos: 1,
                kind: P,
            },
            Crescendo {
                start: 4,
                end: 7,
            },
            Accent {
                pos: 8,
            },
        ],
        first: [
            BeatDivision(
                BeatDivision {
                    lhs: Note(
                        Note {
                            base: D,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    rhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: R,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: Note(
                                Note {
                                    base: M,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            kind: Normal,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: F,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Quarter,
                                },
                            ),
                            kind: Half,
                        },
                    ),
                    rhs: Note(
                        Note {
                            base: T,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: UnderlinedMeasure(
                        Note(
                            Note {
                                base: D,
                                variant: Base,
                                octave: Up(
                                    1,
                                ),
                            },
                        ),
                    ),
                    rhs: Note(
                        Note {
                            base: R,
                            variant: Raised,
                            octave: Up(
                                2,
                            ),
                        },
                    ),
                    kind: Normal,
                },
            ),
        ],
        second: [
            BeatDivision(
                BeatDivision {
                    lhs: Note(
                        Note {
                            base: D,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    rhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: R,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: Note(
                                Note {
                                    base: M,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            kind: Normal,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: F,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Quarter,
                                },
                            ),
                            kind: Half,
                        },
                    ),
                    rhs: Note(
                        Note {
                            base: T,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: UnderlinedMeasure(
                        Note(
                            Note {
                                base: D,
                                variant: Base,
                                octave: Up(
                                    1,
                                ),
                            },
                        ),
                    ),
                    rhs: Note(
                        Note {
                            base: R,
                            variant: Raised,
                            octave: Up(
                                2,
                            ),
                        },
                    ),
                    kind: Normal,
                },
            ),
        ],
        third: [
            BeatDivision(
                BeatDivision {
                    lhs: Note(
                        Note {
                            base: D,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    rhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: R,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: Note(
                                Note {
                                    base: M,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            kind: Normal,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: F,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Quarter,
                                },
                            ),
                            kind: Half,
                        },
                    ),
                    rhs: Note(
                        Note {
                            base: T,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: UnderlinedMeasure(
                        Note(
                            Note {
                                base: D,
                                variant: Base,
                                octave: Up(
                                    1,
                                ),
                            },
                        ),
                    ),
                    rhs: Note(
                        Note {
                            base: R,
                            variant: Lowered,
                            octave: Down(
                                1,
                            ),
                        },
                    ),
                    kind: Normal,
                },
            ),
        ],
        fourth: [
            BeatDivision(
                BeatDivision {
                    lhs: Note(
                        Note {
                            base: D,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    rhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: R,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: Note(
                                Note {
                                    base: M,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            kind: Normal,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: BeatDivision(
                        BeatDivision {
                            lhs: Note(
                                Note {
                                    base: F,
                                    variant: Base,
                                    octave: Base,
                                },
                            ),
                            rhs: BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Quarter,
                                },
                            ),
                            kind: Half,
                        },
                    ),
                    rhs: Note(
                        Note {
                            base: T,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                    kind: Normal,
                },
            ),
            BeatDivision(
                BeatDivision {
                    lhs: Note(
                        Note {
                            base: D,
                            variant: Base,
                            octave: Down(
                                1,
                            ),
                        },
                    ),
                    rhs: Note(
                        Note {
                            base: R,
                            variant: Lowered,
                            octave: Down(
                                1,
                            ),
                        },
                    ),
                    kind: Normal,
                },
            ),
        ],
        lyrics: [
            LyricsTree {
                prefix: "1.",
                root: Join(
                    Chunk(
                        Space(
                            String(
                                "do",
                            ),
                            Concat(
                                String(
                                    "re",
                                ),
                                String(
                                    "mi",
                                ),
                            ),
                        ),
                    ),
                    Concat(
                        Chunk(
                            Space(
                                String(
                                    "fasola",
                                ),
                                Split(
                                    String(
                                        "ti",
                                    ),
                                    String(
                                        "e",
                                    ),
                                ),
                            ),
                        ),
                        Chunk(
                            Space(
                                String(
                                    "do",
                                ),
                                String(
                                    "re",
                                ),
                            ),
                        ),
                    ),
                ),
            },
            LyricsTree {
                prefix: "2.",
                root: Join(
                    Chunk(
                        Space(
                            String(
                                "do",
                            ),
                            Concat(
                                String(
                                    "re",
                                ),
                                String(
                                    "mi",
                                ),
                            ),
                        ),
                    ),
                    Concat(
                        Chunk(
                            Space(
                                String(
                                    "fasola",
                                ),
                                Split(
                                    String(
                                        "ti",
                                    ),
                                    String(
                                        "e",
                                    ),
                                ),
                            ),
                        ),
                        Chunk(
                            Space(
                                String(
                                    "do",
                                ),
                                Placeholder,
                            ),
                        ),
                    ),
                ),
            },
        ],
    },
]
