src/snapshots/solfaml_parser__parser__tests__measure_repetition_parsing.snap
---
source: src/parser.rs
expression: result
---
Ok(
    Solfa {
        header: {},
        staffs: [
            Staff {
                dynamics: [],
                measures: [
                    [
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                    ],
                    [
                        RepeatStart(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: M,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: F,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                        RepeatStart(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: M,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: F,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                        RepeatStart(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: M,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: F,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                        RepeatStart(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: M,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: F,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                    ],
                    [
                        RepeatEnd(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                        RepeatEnd(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                        RepeatEnd(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                        RepeatEnd(
                            BeatDivision(
                                BeatDivision {
                                    lhs: Note(
                                        Note {
                                            base: S,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    rhs: Note(
                                        Note {
                                            base: L,
                                            variant: Base,
                                            octave: Base,
                                        },
                                    ),
                                    kind: Normal,
                                },
                            ),
                        ),
                    ],
                    [
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Up(
                                            1,
                                        ),
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Up(
                                            1,
                                        ),
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Up(
                                            1,
                                        ),
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Up(
                                            1,
                                        ),
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                    ],
                ],
                lyrics: [],
            },
        ],
    },
)
